--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,5 +1,29 @@
 ---
-title: "Default page title"
+title: "What is mAItion?"
 ---
 
-Lorem ipsum dolor sit amet
+mAItion is an all-in-one, ready-to-use AI platform that combines your existing knowledge with large language models (LLMs).
+
+It gives you a single chat interface to:
+
+- chat with your data
+- search across connected sources
+- discover and refine knowledge from scattered systems
+
+## How It Works
+
+mAItion ingests data from connectors (like S3, MediaWiki, and search sources), indexes it, and makes it available for AI-powered retrieval and chat.
+
+You can run local or remote models, configure ingestion pipelines, and adapt the platform for both personal and team workflows.
+
+## Who It Is For
+
+mAItion is built for teams and individuals who need one place to work with organizational knowledge, including:
+
+- internal docs and wiki content
+- cloud storage files
+- external search context
+
+## What You’ll Find In These Docs
+
+This documentation covers setup, configuration, connectors, and day-to-day usage so you can get mAItion running quickly and customize it for your environment.
