Adds a Quickstart guide

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -12,7 +12,7 @@ It gives you a single chat interface to:
 
 ## How It Works
 
-mAItion ingests data from connectors (like S3, MediaWiki, and search sources), indexes it, and makes it available for AI-powered retrieval and chat.
+mAItion ingests data from connectors (like S3, MediaWiki,search sources and many more), indexes it, and makes it available for AI-powered retrieval and chat.
 
 You can run local or remote models, configure ingestion pipelines, and adapt the platform for both personal and team workflows.
 
@@ -23,6 +23,7 @@ mAItion is built for teams and individuals who need one place to work with organ
 - internal docs and wiki content
 - cloud storage files
 - external search context
+- other 3rd party sources
 
 ## What You’ll Find In These Docs
 
