Update MediaWiki and S3 Connector documentation with streamlined titles and enhanced descriptions

--- a/docs/mediawiki-connector.mdx
+++ b/docs/mediawiki-connector.mdx
@@ -1,5 +1,5 @@
 ---
-title: "MediaWiki Connector"
+title: "MediaWiki"
 ---
 
 Use MediaWiki Connector to ingest pages from [MediaWiki](https://www.mediawiki.org/wiki/MediaWiki) sites into mAItion knowledge base.
