--- a/docs/s3-connector.mdx
+++ b/docs/s3-connector.mdx
@@ -1,8 +1,8 @@
 ---
-title: "S3 Connector"
+title: "S3"
 ---
 
-Use S3 Connector to ingest documents from S3-compatible object storage into mAItion knowledge base.
+Use S3 Connector to ingest documents from [S3](https://aws.amazon.com/s3/-compatible) object storage (AWS S3, MinIO, B2, R2, etc).
 
 ## What It Does
 
@@ -20,7 +20,7 @@ Set these in `.env.rag`:
 - `S3_ACCOUNT1_REGION`: bucket region
 - `S3_ACCOUNT1_USE_SSL`: `True` or `False`
 - `S3_ACCOUNT1_BUCKETS`: bucket name(s), comma-separated for multiple
-- `S3_ACCOUNT1_SCHEDULES`: ingestion interval(s) in seconds
+- `S3_ACCOUNT1_SCHEDULES`: ingestion interval(s) in seconds (default is `3600`)
 
 ## `config.yaml` Example
 
