Add backend environment variables documentation

--- a/docs/frontend-env.mdx
+++ b/docs/frontend-env.mdx
@@ -2,6 +2,8 @@
 title: "Environment Variables (Frontend)"
 ---
 
+Reference value for `.env` file.
+
 ## URL and Port
 
 - `WEBUI_URL`: public URL of OpenWebUI (example: `http://localhost:3000`)
