Add image to documentation homepage

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -2,6 +2,8 @@
 title: "What is mAItion?"
 ---
 
+![mAItion](window.png)
+
 mAItion is an all-in-one, ready-to-use AI platform that combines your existing knowledge with large language models (LLMs).
 
 It gives you a single chat interface to:
