--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -4,29 +4,34 @@ title: "What is mAItion?"
 
 ![mAItion](window.png)
 
-mAItion is an all-in-one, ready-to-use AI platform that combines your existing knowledge with large language models (LLMs).
+mAItion is an all-in-one, ready-to-use AI platform that combines your existing knowledge
+with large language models (LLMs).
 
 It gives you a single chat interface to:
 
-- chat with your data
-- search across connected sources
-- discover and refine knowledge from scattered systems
+- Chat with your data
+- Search across connected sources
+- Discover and refine knowledge from scattered systems
 
 ## How It Works
 
-mAItion ingests data from connectors (like S3, MediaWiki,search sources and many more), indexes it, and makes it available for AI-powered retrieval and chat.
+mAItion ingests data from connectors (like S3, MediaWiki,search sources and many more),
+indexes it, and makes it available for AI-powered retrieval and chat.
 
-You can run local or remote models, configure ingestion pipelines, and adapt the platform for both personal and team workflows.
+You can run local or remote models, configure ingestion pipelines, and adapt the platform
+for both personal and team workflows.
 
 ## Who It Is For
 
-mAItion is built for teams and individuals who need one place to work with organizational knowledge, including:
+mAItion is built for teams and individuals who need one place to work with organizational
+knowledge, including:
 
-- internal docs and wiki content
-- cloud storage files
-- external search context
-- other 3rd party sources
+- Internal docs and wikis content
+- Files stored in a cloud
+- External search context
+- Other 3rd party sources
 
 ## What You’ll Find In These Docs
 
-This documentation covers setup, configuration, connectors, and day-to-day usage so you can get mAItion running quickly and customize it for your environment.
+This documentation covers Setup, Configuration, Connectors, and day-to-day usage so you can get
+mAItion running quickly and customize it for your environment.
