Fix image link in documentation by adding missing leading slash

--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -2,7 +2,7 @@
 title: "What is mAItion?"
 ---
 
-![mAItion](window.png)
+![mAItion](/window.png)
 
 mAItion is an all-in-one, ready-to-use AI platform that combines your existing knowledge
 with large language models (LLMs).
