Enhance documentation with descriptions and keywords for improved searchability and context

--- a/docs/configuration/backend-env.mdx
+++ b/docs/configuration/backend-env.mdx
@@ -1,5 +1,11 @@
 ---
 title: "Environment Variables (Backend)"
+description: "Reference for backend environment variables in .env.rag.example used by the mAItion API and workers."
+keywords:
+  - mAItion
+  - backend env
+  - .env.rag
+  - environment variables
 ---
 
 Reference value for `.env.rag` file.
@@ -41,4 +47,3 @@ Reference value for `.env.rag` file.
 - `ENABLE_RATE_LIMIT`: enable rate limiting (`True`/`False`)
 - `CHUNK_RATE_LIMIT`: rate limit for chunk endpoint (example: `30/minute`)
 - `REPHRASE_RATE_LIMIT`: rate limit for rephrase endpoint (example: `30/minute`)
-
