--- a/docs/configuration/config-reference.mdx
+++ b/docs/configuration/config-reference.mdx
@@ -1,5 +1,11 @@
 ---
 title: "Config reference"
+description: "Reference for mAItion config.yaml: sources, embedding, inference, and vector store settings."
+keywords:
+  - mAItion
+  - config.yaml
+  - configuration
+  - vector store
 ---
 
 Reference for `config.yaml`.
