--- a/docs/configuration/frontend-env.mdx
+++ b/docs/configuration/frontend-env.mdx
@@ -1,5 +1,11 @@
 ---
 title: "Environment Variables (Frontend)"
+description: "Reference for frontend environment variables in .env.openwebui.example for mAItion OpenWebUI setup."
+keywords:
+  - mAItion
+  - frontend env
+  - OpenWebUI
+  - environment variables
 ---
 
 Reference value for `.env` file.
