--- a/docs/connectors/mediawiki-connector.mdx
+++ b/docs/connectors/mediawiki-connector.mdx
@@ -1,5 +1,11 @@
 ---
 title: "MediaWiki"
+description: "Configure the mAItion MediaWiki connector to ingest wiki pages via the MediaWiki API."
+keywords:
+  - mAItion
+  - MediaWiki connector
+  - wiki ingestion
+  - connectors
 ---
 
 Use MediaWiki Connector to ingest pages from [MediaWiki](https://www.mediawiki.org/wiki/MediaWiki) sites into mAItion knowledge base.
