--- a/docs/connectors/s3-connector.mdx
+++ b/docs/connectors/s3-connector.mdx
@@ -1,5 +1,11 @@
 ---
 title: "S3"
+description: "Configure the mAItion S3 connector to ingest files from AWS S3 and S3-compatible storage."
+keywords:
+  - mAItion
+  - S3 connector
+  - AWS S3
+  - ingestion
 ---
 
 Use S3 Connector to ingest documents from [S3](https://aws.amazon.com/s3/-compatible) object storage (AWS S3, MinIO, B2, R2, etc).
