--- a/docs/connectors/serpapi-connector.mdx
+++ b/docs/connectors/serpapi-connector.mdx
@@ -1,5 +1,11 @@
 ---
 title: "SerpAPI"
+description: "Configure the mAItion SerpAPI connector to ingest Google search results on a schedule."
+keywords:
+  - mAItion
+  - SerpAPI connector
+  - Google search ingestion
+  - connectors
 ---
 
 Use [SerpAPI](https://serpapi.com/) Connector to ingest Google Search results.
