--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -1,5 +1,11 @@
 ---
 title: "What is mAItion?"
+description: "Learn what mAItion is, how it works, and what this documentation covers."
+keywords:
+  - mAItion
+  - AI knowledge platform
+  - RAG
+  - documentation
 ---
 
 ![mAItion](/window.png)
