--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -1,5 +1,11 @@
 ---
 title: "Quick Start"
+description: "Quick start guide for mAItion: prerequisites, configuration, startup, and first login."
+keywords:
+  - mAItion
+  - quick start
+  - setup
+  - docker
 ---
 
 ## Requirements
