--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -19,6 +19,17 @@ It gives you a single chat interface to:
 - Search across connected sources
 - Discover and refine knowledge from scattered systems
 
+## Features
+
+<CardGroup cols={2}>
+	<Card title="Up-to-date knowledge" href="/features/up-to-date-knowledge">
+		Keep answers fresh with scheduled connector ingestion and continuous updates.
+	</Card>
+	<Card title="Citation-backed answers" href="/features/citation-backed-answers">
+		Validate responses using source-backed references from retrieved context.
+	</Card>
+</CardGroup>
+
 ## How It Works
 
 mAItion ingests data from connectors (like S3, MediaWiki,search sources and many more),
@@ -26,6 +37,20 @@ indexes it, and makes it available for AI-powered retrieval and chat.
 
 You can run local or remote models, configure ingestion pipelines, and adapt the platform
 for both personal and team workflows.
+
+## Connectors
+
+<CardGroup cols={3}>
+	<Card title="S3" href="/connectors/s3-connector">
+		Ingest files from AWS S3 and S3-compatible storage.
+	</Card>
+	<Card title="Mediawiki" href="/connectors/mediawiki-connector">
+		Ingest wiki content from MediaWiki API endpoints.
+	</Card>
+	<Card title="Serp" href="/connectors/serpapi-connector">
+		Ingest web search results via SerpAPI.
+	</Card>
+</CardGroup>
 
 ## Who It Is For
 
@@ -41,3 +66,4 @@ knowledge, including:
 
 This documentation covers Setup, Configuration, Connectors, and day-to-day usage so you can get
 mAItion running quickly and customize it for your environment.
+
