Enhance Quick Start guide with details on configuring mAItion with an S3 bucket

--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -8,6 +8,9 @@ keywords:
   - docker
 ---
 
+Upon completion of this Quick Start process you'll have a fully functional mAItion instance running locally
+and configured to use your S3 bucket as a data source.
+
 ## Requirements
 
 - Docker and Docker Compose
