Fixes typo on up-to-date-knowledge.mdx and updates wording on index.mdx

--- a/docs/features/up-to-date-knowledge.mdx
+++ b/docs/features/up-to-date-knowledge.mdx
@@ -22,6 +22,6 @@ content from configured connectors.
 
 - Answers reflect latest available source data
 - Less manual sync work
-- Oe place to query current internal knowledge
+- One place to query current internal knowledge
 
 See [Connectors](/connectors) for more information.
