--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -32,8 +32,10 @@ It gives you a single chat interface to:
 
 ## How It Works
 
-mAItion ingests data from connectors (like S3, MediaWiki,search sources and many more),
-indexes it, and makes it available for AI-powered retrieval and chat.
+mAItion seamlessly ingests data from a wide array of connectors, including Jira,
+Confluence, Notion, S3, MediaWiki, search sources, and many more, indexes it efficiently,
+and makes it readily available for AI-powered retrieval and chat through versatile
+integrations such as Slack, Microsoft Teams, Open WebUI, and numerous others.
 
 You can run local or remote models, configure ingestion pipelines, and adapt the platform
 for both personal and team workflows.
